/*
   Copyright 2018-2019 Banco Bilbao Vizcaya Argentaria, S.A.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
*/

syntax = "proto3";

package consensus;
option go_package = "consensus";

message NodeInfo {
    string node_id = 1;
    string raft_addr = 2;
    string cluster_mgmt_addr = 3;
    string http_addr = 4;
    string http_mgmt_addr = 5;
    string metrics_addr = 6;
}

message ClusterInfo {
    string leader_id = 1;
    map<string, NodeInfo> nodes = 2;
}

message RaftJoinRequest {
    NodeInfo node_info = 1;
}

message RaftJoinResponse {
    ClusterInfo cluster_info = 1;
}

message SyncClusterInfoRequest {
    ClusterInfo cluster_info = 1;
}

message SyncClusterInfoResponse{
    ClusterInfo cluster_info = 1;
}

service ClusterService {
    rpc JoinCluster (RaftJoinRequest) returns (RaftJoinResponse);
    rpc SyncClusterInfo (SyncClusterInfoRequest) returns (SyncClusterInfoResponse);
}